# enzax

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/: pull_request_template.md
.github/workflows/: count-lines-of-code.yml  release.yml  run_pytest.yml  run_tests.yml  test_docs.yml
docs/: accessibility.md  api.md  getting_started.md  index.md  statistical_modelling.md
docs/api/: kinetic_model.md  mcmc.md  rate_equations.md  sbml.md  steady_state.md
notebooks/: sbmlsandbox.ipynb
scripts/: ivp_demo.py  mcmc_demo.py  sbml_demo.py  steady_state_demo.py
src/enzax/: ivp.py  kinetic_model.py  mcmc.py  parameters.py  rate_equation.py  rate_equations.py  sbml.py  statistical_modelling.py  steady_state.py  steady_state_problem.py  symbolic_rate_equation.py
src/enzax/examples/: YeastGlycolysis.xml  exampleode.xml  linear.py  methionine.py  methionine.toml  smallbone.py  smallbone2013_model18_modified.xml
src/enzax/mcmc/: __init__.py  allosteric_michaelis_menten.py  distributions.py  grapevine.py  nuts.py  observation_set.py
src/enzax/rate_equations/: __init__.py  drain.py  generalised_mwc.py  mass_action.py  michaelis_menten.py  thermodynamics.py
tests/: conftest.py  methionine_pldf_grad.json  test_examples.py  test_kinetic_model.py  test_lp_grad.py  test_rate_equations.py  test_sbml.py
tests/data/: brusselator.xml  exampleode.xml  expected_methionine_gradient.json  methionine_pldf_grad.json
