[project]
name = "enzax"
version = "0.1.0"
description = "Differentiable models of enzyme-catalysed reaction networks"
authors = [
    {name = "Teddy Groves", email = "tedgro@dtu.dk"},
]
dependencies = [
    "blackjax>=1.2.1",
    "pydantic>=2.8.2",
    "diffrax>=0.6.0",
    "chex>=0.1.86",
    "jaxtyping>=0.2.31",
    "pytest-cov>=5.0.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pdm]
distribution = true

[tool.ruff]
line-length = 80

[tool.ruff.lint]
ignore = ["F722"]

[tool.ruff.lint.isort]
known-first-party = ["enzax"]
