[project]
name = "enzax"
version = "0.1.0"
description = "Differentiable models of enzyme-catalysed reaction networks"
authors = [
    {name = "Teddy Groves", email = "tedgro@dtu.dk"},
]
dependencies = [
    "blackjax>=1.2.1",
    "diffrax>=0.6.0",
    "jaxtyping>=0.2.31",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.8.0",
]
[tool.ruff]
line-length = 80

[tool.ruff.lint]
ignore = ["F722"]

[tool.ruff.lint.isort]
known-first-party = ["enzax"]
