[project]
name = "enzax"
version = "0.2.1"
description = "Differentiable models of enzyme-catalysed reaction networks"
authors = [
    {name = "Teddy Groves", email = "tedgro@dtu.dk"},
]
dependencies = [
    "blackjax>=1.2.1",
    "diffrax>=0.7.0",
    "jaxtyping>=0.2.38",
    "arviz>=0.19.0",
    "equinox>=0.11.12",
    "python-libsbml>=5.20.4",
    "sympy2jax>=0.0.5",
    "sbmlmath>=0.2.0",
    "jax>=0.5.2",
    "typeguard>=2.13.3",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.32",
    "mkdocstrings>=0.25.2",
    "mkdocstrings-python>=1.10.8",
    "pymdown-extensions>=10.9",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pdm]
distribution = true

[tool.ruff]
line-length = 80

[tool.ruff.lint]
ignore = ["F722"]
extend-select = ["E501"]  # line length is checked

[tool.ruff.lint.isort]
known-first-party = ["enzax"]

[dependency-groups]
dev = [
    "pytest-cov>=5.0.0",
    "pre-commit>=3.8.0",
    "pytest==8.3.5",
]
